# rdkit-demo

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
config/template/: env.yaml
script/: build_conda.sh  function.sh
src/: main.py
