[tool.poetry]
name = "python-dev-template"
version = "0.1.0"
description = ""
authors = ["SMase <mase@lifematics.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
taskipy = "^1.12.2"
matplotlib = "^3.9.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
jupyterlab = "<4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
hello = "echo 'Hi, hello world'"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true

[tool.ruff]
target-version = "py310" # Pythonのバージョンを指定
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["ANN101"]
select = ["ALL"] # すべてのルールを適用する
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google" # docstringの形式を指定